# Peripatos

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile.install-test  Dockerfile.test  LICENSE  README.md  config.example.json  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt
.sisyphus/: COMPLETION_REPORT.md  boulder.json
.sisyphus/evidence/: TASK_4_FINAL_VERIFICATION.md  task-1-api-key-validation.txt  task-1-config-validation.txt  task-1-enum-values.txt  task-1-forbidden-deps.txt  task-1-fresh-install.txt  task-1-pyproject-dep.txt  task-1-structure-validation.txt  task-10-available.txt  task-10-voices.txt  task-11-fallback.txt  task-12-bilingual-prompt.txt  task-13-chapters.txt  task-13-no-ffmpeg.txt  task-14-cli-help.txt  task-14-invalid-source.txt  task-14-source-detect.txt  task-15-clean-install.txt  task-16-e2e-pipeline.txt  task-16-full-suite.txt  task-17-readme.txt  task-2-default-config.txt  task-2-env-api-keys.txt  task-2-env-environment-docs.txt  task-2-env-loglevel-docs.txt  task-2-final-verification.txt  task-2-missing-key-error.txt  task-3-models-import.txt  task-3-openrouter-apikey.txt  task-3-openrouter-baseurl.txt  task-3-openrouter-dispatch.txt  task-4-fixture-usage.txt  task-4-fixtures.txt  task-4-gemini-dispatch.txt  task-4-gemini-import.txt  task-4-gemini-response.txt  task-4-gemini-system-instruction.txt  task-4-summary.txt  task-4-test-discovery.txt  task-5-parse-pdf.txt  (+9 more)
.sisyphus/plans/: granite-docling-evaluation.md  llm-provider-extension.md  peripatos-core-mvp.md  readme-tts-docs.md
peripatos/: __init__.py  cli.py  config.py  models.py
peripatos/brain/: __init__.py  bilingual.py  chapters.py  generator.py  personas.py
peripatos/eval/: __init__.py  compare.py  corpus.py  report.py
peripatos/eye/: __init__.py  arxiv.py  math_normalize.py  parser.py  vlm.py
peripatos/voice/: __init__.py  edge_tts_engine.py  mixer.py  openai_tts.py  renderer.py
peripatos_core/: __init__.py  __main__.py  archetypes.py  audio.py  cli.py  config.py  dialogue.py  exceptions.py  fetcher.py  http.py  mineru_client.py  parser.py  registry.py  types.py
peripatos_core/prompts/: __init__.py  host_questions.txt  intro.txt  outro.txt  react_system.txt  synthesis.txt
peripatos_core/providers/: llm.py  llm_stub.py  tts.py  tts_stub.py
peripatos_core/rag/: agent.py  chunker.py  embedder.py  sources.py  tools.py  vector_store.py
prompts/archetypes/: author_persona.yaml  devils_advocate.yaml  domain_expert.yaml  enthusiast.yaml  proxy_host.yaml  skeptic.yaml  the_enthusiast.yaml  the_peer.yaml  the_skeptic.yaml  the_tutor.yaml  tutor.yaml
schema/: config.schema.json
scripts/: test.sh
tests/: __init__.py  conftest.py  test_agent.py  test_archetypes.py  test_arxiv.py  test_audio.py  test_audio_music.py  test_bilingual.py  test_brain.py  test_chapters.py  test_cli.py  test_config.py  test_dialogue.py  test_e2e.py  test_edge_tts.py  test_embedder.py  test_eval.py  test_exceptions.py  test_fetcher.py  test_http_retry.py  test_integration_chapters.py  test_llm_provider.py  test_manual_qa.py  test_math.py  test_mineru_api_connectivity.py  test_mineru_client.py  test_mixer.py  test_models.py  test_openai_tts.py  test_package.py  test_packaging.py  test_parser.py  test_parser_integration.py  test_pipeline_chapters.py  test_prompts.py  test_registry.py  test_renderer.py  test_sources.py  test_tts_provider.py  test_types.py  (+2 more)
tests/fixtures/: integration_config.example.json  sample_config.yaml  sample_dialogue.json
(+22 files in other folders)
