[project]
name = "peripatos-core"
version = "1.2.0"
description = "Convert academic papers to Socratic-dialogue podcasts"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "typer>=0.12,<1.0",
    "pydub>=0.25,<1.0",
    "audioop-lts>=0.2.1; python_version >= \"3.13\"",
    "mutagen>=1.47,<2.0",
    "openai>=1.40,<2.0",
    "edge-tts>=7.2,<8.0",
    "requests>=2.31,<3.0",
    "pyyaml>=6.0,<7.0",
    "json-repair>=0.30,<1.0",
    "faiss-cpu>=1.8.0",
    "numpy>=1.26.0",
    "beautifulsoup4>=4.12.0",
    "pymupdf>=1.24.0",
]

[project.scripts]
peripatos = "peripatos_core.cli:main"

[project.optional-dependencies]
dev = [
    "responses>=0.25.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["peripatos_core*"]

[tool.setuptools.package-data]
peripatos_core = [
    "prompts/archetypes/*.yaml",
    "prompts/*.txt",
    "audio/*.mp3",
]

[tool.pytest.ini_options]
markers = [
    "integration: opt-in real-API tests (deselect with '-m not integration')",
]
testpaths = ["tests"]
filterwarnings = [
    "ignore:builtin type.*has no __module__:DeprecationWarning",
    "ignore::DeprecationWarning:responses",
]

[tool.ruff]
line-length = 100
target-version = "py310"
